# teaching

./: README.md
CSE_2312/: hello_world.s
Teensy USB Development Board/demo applications/: teensy_demo.sln
Teensy USB Development Board/demo applications/teensy_serial_demo/: teensy_serial_demo.sln
Teensy USB Development Board/firmware/serial_communication_variable/: serial_communication_variable.ino
Teensy USB Development Board/firmware/serial_stepper_control/: serial_stepper_control.ino
assembly/: compare_char.s  exam_template.s  hello_world.s  mod.s  printf.s  procedure_call.s  procedure_call_parameters.s  reg_dump.s  scanf.s
cpp_threads/: serial_polling.cpp
cv_demo/: CMakeLists.txt  cv_capture_example.cpp  cv_color_detector.cpp
cv_usb_example/: CMakeLists.txt  cv_capture_example.cpp  cv_color_detector.cpp
documentation/: ADS Guide.doc  DDS Guide.doc  Requirements Gathering Worksheet.xlsx  SRS Guide.doc
documentation/architectural specification latex/: architectural_specification.tex
documentation/architectural specification latex/tex/: system_overview.tex
documentation/project charter latex/: project_charter.tex
documentation/project charter latex/tex/: cost_proposal.tex  documentation_reporting.tex  mission.tex  related_work.tex
documentation/system requirements specification latex/: system_requirements_specification.tex
documentation/system requirements specification latex/tex/: customer_requirements.tex  safety_requirements.tex
nodejs/: daemon.js  server.js
pcb/BLE demo/: RN4020_BLE_V1.brd  RN4020_BLE_V1.sch
pcl_demo/: CMakeLists.txt  CloudVisualizer.cpp  CloudVisualizer.h  Utility.cpp  Utility.h  load_pcd.cpp  openni2_snapper.cpp
pupil_tracker/: pupil_demo.cpp
raspi/: openCV 2.4.10 raspbian install.txt
teensy_demo/demo applications/: teensy_demo.sln
teensy_demo/demo applications/teensy_accelstepper_demo/: Form1.Designer.cs  Form1.cs
teensy_demo/firmware/serial_accelstepper_control/: serial_accelstepper_control.ino
zmq demo/: CMakeLists.txt  zmq_cv_request.cpp  zmq_cv_server.cpp  zmq_image_request.cpp  zmq_image_server.cpp
